--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
         }
     ],
     "require": {
-        "doctrine/cache": "^1.10"
+        "doctrine/cache": "^1.10",
+        "psr/simple-cache": "^1.0",
+        "symfony/cache": "^5.1"
     },
     "autoload": {
         "psr-4": {
